--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <h1>Welcome to Joel Clinic</h1>
         <nav>
             <ul>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="patient-info.html">Patient Info</a></li>
+                <li><a href="level.html">About Us</a></li>
+                <li><a href="service page.html">Services</a></li>
+                <li><a href="patient inform.html">Patient Info</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="contact us.html">Contact Us</a></li>
                 <li><a href="appointment.html">Book Appointment</a></li>
-                <li><a href="events.html">News/Events</a></li>
-                <li><a href="privacy.html">Privacy Policy</a></li>
+                <li><a href="Event.html">News/Events</a></li>
+                <li><a href="privacy policy.html">Privacy Policy</a></li>
             </ul>
         </nav>
     </header>
